add load_gs using credentials.json

--- a/init-mysql/Dockerfile
+++ b/init-mysql/Dockerfile
@@ -1,5 +1,11 @@
 FROM --platform=linux/arm64 python:3.12.4
 
+ENV MYSQL_HOST=mysql-server \
+    MYSQL_PORT=3306 \
+    MYSQL_USER=iitns  \
+    MYSQL_PASSWORD=default-password \
+    MYSQL_DATABASE=iitns
+
 USER root
 
 RUN apt update && apt upgrade
@@ -11,13 +17,8 @@ WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 RUN pip install -r requirements.txt
 
-ENV MYSQL_HOST=mysql-server \
-    MYSQL_PORT=3306 \
-    MYSQL_USER=iitns  \
-    MYSQL_PASSWORD=default-password \
-    MYSQL_DATABASE=iitns
+COPY . /app/
+RUN rm -f /app/attendance*.json
+RUN rm -f /app/registration*.json
 
-COPY init.sh /app/init.sh
 RUN chmod +x /app/init.sh
-
-COPY init-schema.sql /app/init-schema.sql
